fix layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,6 @@ html body {
 /* Input Smart Cover */
 .input-smart-cover {
   position: relative;
-  max-width: fit-content;
 }
 
 .input-smart-cover__btns {
